// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.updateBatch > functionality > locked as false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "207.0400",
        "currencyCode": "KRW",
        "lockedTimestamp": null,
        "note": "excepturi harum porro",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-207.0400",
        "currencyCode": "KRW",
        "lockedTimestamp": null,
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as false > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-890.6300",
        "currencyCode": "XAF",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "890.6300",
        "currencyCode": "XAF",
        "note": "delectus suscipit laudantium",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as false > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "207.0400",
        "currencyCode": "KRW",
        "lockedTimestamp": null,
        "note": "excepturi harum porro",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as false > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "890.6300",
        "currencyCode": "XAF",
        "note": "delectus suscipit laudantium",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "207.0400",
        "currencyCode": "KRW",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "excepturi harum porro",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-207.0400",
        "currencyCode": "KRW",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-890.6300",
        "currencyCode": "XAF",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "890.6300",
        "currencyCode": "XAF",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "delectus suscipit laudantium",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as true > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "207.0400",
        "currencyCode": "KRW",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "excepturi harum porro",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > locked as true > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "890.6300",
        "currencyCode": "XAF",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "delectus suscipit laudantium",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > no locked > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "207.0400",
        "currencyCode": "KRW",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "excepturi harum porro",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-207.0400",
        "currencyCode": "KRW",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > no locked > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-890.6300",
        "currencyCode": "XAF",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "890.6300",
        "currencyCode": "XAF",
        "note": "delectus suscipit laudantium",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > no locked > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "207.0400",
        "currencyCode": "KRW",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "excepturi harum porro",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > functionality > no locked > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "890.6300",
        "currencyCode": "XAF",
        "note": "delectus suscipit laudantium",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with distinctly locking values > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "aperiam facilis cum",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "806.3800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-806.3800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with distinctly locking values > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "ratione eaque aliquid",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-513.5700",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "513.5700",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with distinctly locking values > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "aperiam facilis cum",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "806.3800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with distinctly locking values > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "ratione eaque aliquid",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "513.5700",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with locking values > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "48.3500",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "806.3800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-806.3800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with locking values > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "188.8000",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-513.5700",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "513.5700",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with locking values > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "48.3500",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "806.3800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with locking values > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "188.8000",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "513.5700",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with non-locking values > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "cum soluta esse",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "maxime aperiam facilis",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with non-locking values > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "aliquid molestiae porro",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "laudantium ratione eaque",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with non-locking values > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "cum soluta esse",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "maxime aperiam facilis",
      },
    },
  },
}
`;

exports[`debts.updateBatch > update multiple debts > with non-locking values > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "aliquid molestiae porro",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "laudantium ratione eaque",
      },
    },
  },
}
`;
